offload/tests/ui-an-mode/float_boundary.stderr
error[E0277]: `f64` cannot cross the offload boundary in AN mode
 --> tests/ui-an-mode/float_boundary.rs:4:20
  |
4 | fn distance(value: f64) -> f64 {
  |                    ^^^ the trait `AnCompatible` is not implemented for `f64`
  |
  = note: floating-point values are not representable under AN encoding; derive `AnCompatible` for float-free structs and enums
  = help: the following other types implement trait `AnCompatible`:
            i16
            i32
            i64
            i8
            u16
            u32
            u64
            u8
  = note: required for `f64` to implement `BoundaryCompatible`
note: required by a bound in `assert_boundary`
 --> tests/ui-an-mode/float_boundary.rs:3:1
  |
3 | #[offload]
  | ^^^^^^^^^^ required by this bound in `assert_boundary`
  = note: this error originates in the attribute macro `offload` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `f64` cannot cross the offload boundary in AN mode
 --> tests/ui-an-mode/float_boundary.rs:4:28
  |
4 | fn distance(value: f64) -> f64 {
  |                            ^^^ the trait `AnCompatible` is not implemented for `f64`
  |
  = note: floating-point values are not representable under AN encoding; derive `AnCompatible` for float-free structs and enums
  = help: the following other types implement trait `AnCompatible`:
            i16
            i32
            i64
            i8
            u16
            u32
            u64
            u8
  = note: required for `f64` to implement `BoundaryCompatible`
note: required by a bound in `assert_boundary`
 --> tests/ui-an-mode/float_boundary.rs:3:1
  |
3 | #[offload]
  | ^^^^^^^^^^ required by this bound in `assert_boundary`
  = note: this error originates in the attribute macro `offload` (in Nightly builds, run with -Z macro-backtrace for more info)
